--- a/Language/English/basic/美国.md
+++ b/Language/English/basic/美国.md
@@ -12,7 +12,7 @@ title: 美利坚合众国
 
 美国每一个州都是一个独立的邦国，有自己的宪法。联邦政府的权力，由各州政府授予。没有授予联邦政府的权力，仍然由各州自行拥有。每个州都有自己的立法、司法、行政体系。州议员和州长都由普选产生。另有印第安保留区和公立大学系统等特殊行政单位。美国人口普查局把全国划分为九大地区，而地理学界常把美国划分为七大地区、九大地区或十大地区。它们并不是真正的行政区划，但是对美国的行政有着一些影响，因此经常被列在行政区划里。其中最传统的美国行政区的划分方式为：新英格兰，中大西洋地区，东南地区，南方地区，中西部地区，上密西西比-五大湖区，落基山区，太平洋沿岸地区，西南地区。
 
-![america](https://raw.githubusercontent.com/wiki/professordeng/blog/english/america.jpeg)
+![america](img/america.jpeg)
 
 美国行政区划架构为
 
@@ -128,7 +128,7 @@ title: 美利坚合众国
 
 ## 新英格兰区
 
-![新英格兰](https://raw.githubusercontent.com/wiki/professordeng/blog/english/newEngland.png)
+![新英格兰](img/newEngland.png)
 
 新英格兰地区（New England）（6 个州）
 
